style(fix): FiltersSection grid layout to be responsive on small mobile screens

--- a/frontend/src/Components/Pages/Home/FiltersSection/FiltersSection.module.scss
+++ b/frontend/src/Components/Pages/Home/FiltersSection/FiltersSection.module.scss
@@ -1,6 +1,14 @@
+@use "@/Styles/mixins" as m;
+
 .filtersSection {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
   gap: 14px;
   margin-top: 24px;
+}
+
+@include m.small {
+  .filtersSection {
+    grid-template-columns: 1fr;
+  }
 }
